/*
 * Copyright (c) 2023. Programacion Orientada al Objeto, DISC, UCN.
 */

package cl.ucn.disc.poo.agenda.domain;

/**
 * Tipo de Telefono.
 *
 * @author Programacion Orientada al Objeto.
 */
public enum TipoTelefono {
    /**
     * Telefono fijo.
     */
    FIJO,
    /**
     * Telefono movil.
     */
    MOVIL,
}
